public/css/footer.css
/* ... */
.footer-list-links ul {
    list-style-type: none;
    padding: 0;
    margin: 0;
}
.footer-list-links ul li a {
    color: white;
    text-decoration: none;
}
.footer-list-links ul li a:hover {
    text-decoration: underline;
}
#links-footer {
    grid-area: links;
}
#usables-footer {
    grid-area: usefuls;
}
#socials-footer {
    grid-area: socials;
}
.socials-content {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: flex-start;
    align-items: center;
}
.socials-content a {
    margin: 5px;
}
.social-facebook {
    display: block;
    width: 40px;
    height: 40px;
    background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='UTF-8' standalone='no'%3F%3E%3Csvg xmlns:dc='http://purl.org/dc/elements/1.1/' xmlns:cc='http://creativecommons.org/ns%23' xmlns:rdf='http://www.w3.org/1999/02/22-rdf-syntax-ns%23' xmlns:svg='http://www.w3.org/2000/svg' xmlns='http://www.w3.org/2000/svg' xmlns:sodipodi='http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd' xmlns:inkscape='http://www.inkscape.org/namespaces/inkscape' inkscape:version='1.0 (4035a4fb49, 2020-05-01)' sodipodi:docname='facebook.svg' xml:space='preserve' style='enable-background:new 0 0 97.75 97.75;' viewBox='0 0 97.75 97.75' height='97.75px' width='97.75px' y='0px' x='0px' id='Capa_1' version='1.1'%3E%3Cmetadata id='metadata2297'%3E%3Crdf:RDF%3E%3Ccc:Work rdf:about=''%3E%3Cdc:format%3Eimage/svg+xml%3C/dc:format%3E%3Cdc:type rdf:resource='http://purl.org/dc/dcmitype/StillImage' /%3E%3Cdc:title%3E%3C/dc:title%3E%3C/cc:Work%3E%3C/rdf:RDF%3E%3C/metadata%3E%3Cdefs id='defs2295' /%3E%3Csodipodi:namedview inkscape:current-layer='g2260' inkscape:window-maximized='1' inkscape:window-y='-8' inkscape:window-x='-8' inkscape:cy='48.875' inkscape:cx='48.875' inkscape:zoom='8.6956522' showgrid='false' id='namedview2293' inkscape:window-height='1017' inkscape:window-width='1920' inkscape:pageshadow='2' inkscape:pageopacity='0' guidetolerance='10' gridtolerance='10' objecttolerance='10' borderopacity='1' bordercolor='%23666666' pagecolor='%23ffffff' /%3E%3Cg id='g2260'%3E%3Cpath style='fill:%23ffffff;fill-opacity:1' id='path2258' d='M48.875,0C21.882,0,0,21.882,0,48.875S21.882,97.75,48.875,97.75S97.75,75.868,97.75,48.875S75.868,0,48.875,0z M67.521,24.89l-6.76,0.003c-5.301,0-6.326,2.519-6.326,6.215v8.15h12.641L67.07,52.023H54.436v32.758H41.251V52.023H30.229V39.258 h11.022v-9.414c0-10.925,6.675-16.875,16.42-16.875l9.851,0.015V24.89L67.521,24.89z' /%3E%3C/g%3E%3Cg id='g2262'%3E%3C/g%3E%3Cg id='g2264'%3E%3C/g%3E%3Cg id='g2266'%3E%3C/g%3E%3Cg id='g2268'%3E%3C/g%3E%3Cg id='g2270'%3E%3C/g%3E%3Cg id='g2272'%3E%3C/g%3E%3Cg id='g2274'%3E%3C/g%3E%3Cg id='g2276'%3E%3C/g%3E%3Cg id='g2278'%3E%3C/g%3E%3Cg id='g2280'%3E%3C/g%3E%3Cg id='g2282'%3E%3C/g%3E%3Cg id='g2284'%3E%3C/g%3E%3Cg id='g2286'%3E%3C/g%3E%3Cg id='g2288'%3E%3C/g%3E%3Cg id='g2290'%3E%3C/g%3E%3C/svg%3E%0A");
    background-size: contain;
    background-repeat: no-repeat;
}
.social-facebook:hover {
    background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='UTF-8' standalone='no'%3F%3E%3Csvg xmlns:dc='http://purl.org/dc/elements/1.1/' xmlns:cc='http://creativecommons.org/ns%23' xmlns:rdf='http://www.w3.org/1999/02/22-rdf-syntax-ns%23' xmlns:svg='http://www.w3.org/2000/svg' xmlns='http://www.w3.org/2000/svg' xmlns:sodipodi='http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd' xmlns:inkscape='http://www.inkscape.org/namespaces/inkscape' inkscape:version='1.0 (4035a4fb49, 2020-05-01)' sodipodi:docname='facebook-hover.svg' xml:space='preserve' style='enable-background:new 0 0 97.75 97.75;' viewBox='0 0 97.75 97.75' height='97.75px' width='97.75px' y='0px' x='0px' id='Capa_1' version='1.1'%3E%3Cmetadata id='metadata2297'%3E%3Crdf:RDF%3E%3Ccc:Work rdf:about=''%3E%3Cdc:format%3Eimage/svg+xml%3C/dc:format%3E%3Cdc:type rdf:resource='http://purl.org/dc/dcmitype/StillImage' /%3E%3Cdc:title%3E%3C/dc:title%3E%3C/cc:Work%3E%3C/rdf:RDF%3E%3C/metadata%3E%3Cdefs id='defs2295' /%3E%3Csodipodi:namedview inkscape:current-layer='g2260' inkscape:window-maximized='1' inkscape:window-y='-8' inkscape:window-x='-8' inkscape:cy='48.875' inkscape:cx='48.875' inkscape:zoom='8.6956522' showgrid='false' id='namedview2293' inkscape:window-height='1017' inkscape:window-width='1920' inkscape:pageshadow='2' inkscape:pageopacity='0' guidetolerance='10' gridtolerance='10' objecttolerance='10' borderopacity='1' bordercolor='%23666666' pagecolor='%23ffffff' /%3E%3Cg id='g2260'%3E%3Cpath style='fill:%23c8c8c8;fill-opacity:1' id='path2258' d='M48.875,0C21.882,0,0,21.882,0,48.875S21.882,97.75,48.875,97.75S97.75,75.868,97.75,48.875S75.868,0,48.875,0z M67.521,24.89l-6.76,0.003c-5.301,0-6.326,2.519-6.326,6.215v8.15h12.641L67.07,52.023H54.436v32.758H41.251V52.023H30.229V39.258 h11.022v-9.414c0-10.925,6.675-16.875,16.42-16.875l9.851,0.015V24.89L67.521,24.89z' /%3E%3C/g%3E%3Cg id='g2262'%3E%3C/g%3E%3Cg id='g2264'%3E%3C/g%3E%3Cg id='g2266'%3E%3C/g%3E%3Cg id='g2268'%3E%3C/g%3E%3Cg id='g2270'%3E%3C/g%3E%3Cg id='g2272'%3E%3C/g%3E%3Cg id='g2274'%3E%3C/g%3E%3Cg id='g2276'%3E%3C/g%3E%3Cg id='g2278'%3E%3C/g%3E%3Cg id='g2280'%3E%3C/g%3E%3Cg id='g2282'%3E%3C/g%3E%3Cg id='g2284'%3E%3C/g%3E%3Cg id='g2286'%3E%3C/g%3E%3Cg id='g2288'%3E%3C/g%3E%3Cg id='g2290'%3E%3C/g%3E%3C/svg%3E%0A");
}
/* ... */

